Fix overflow

--- a/style.css
+++ b/style.css
@@ -120,12 +120,9 @@ header {
 }
 
 main {
-  height: fit-content;
-  min-height: 700px;
+
   display: flex;
   padding: 175px 0 52px 0;
-  width: fit-content;
-  margin: 0 auto 0 auto;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
